# yolov5rtspthreadpool

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore  CMakeLists.txt  native-lib.cpp
app/src/main/cpp/draw/: cv_draw.cpp  cv_draw.h
app/src/main/cpp/engine/: engine.h  engine_helper.h  rknn_engine.cpp  rknn_engine.h
app/src/main/cpp/include/: ZLPlayer.h  display_queue.h  log4c.h  logging.h  mpi.h  rga_utils.h  safe_queue.h  user_comm.h  util.h
app/src/main/cpp/opencv/jni/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules-release.cmake
app/src/main/cpp/opencv/jni/abi-armeabi-v7a/: OpenCVConfig.cmake
app/src/main/cpp/opencv/jni/abi-x86/: OpenCVConfig.cmake
app/src/main/cpp/process/: preprocess.cpp  preprocess.h  yolov5_postprocess.h
app/src/main/cpp/src/: ZLPlayer.cpp  display_queue.cpp  rga_utils.cpp
app/src/main/cpp/task/: yolov5.cpp  yolov5.h  yolov5_thread_pool.cpp  yolov5_thread_pool.h
app/src/main/cpp/types/: datatype.h
app/src/main/java/com/wulala/myyolov5rtspthreadpool/: BKAIPlayer.kt  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
